Changed ingame help text.

--- a/sokoban.html
+++ b/sokoban.html
@@ -629,16 +629,15 @@
             </div>
             <div id="help" onClick="hideHelp();">
                 <p>
-                    <center><strong>Kistje Duwen</strong></center>
+                    <center><strong>Sokoban</strong></center>
                 </p>
                 <p>
-                    <b>Verhaal:</b> Je bent een robot in het magazijn van een warenhuis. De kistjes moeten van hun beginpositie verplaatst worden naar de rode stippen op de vloer. Er zijn in ieder level net zo veel kistjes als rode stippen. Als alle rode stippen zijn bezet door een kistje is het level klaar. Helaas ben je een vrij beperkte robot die kistjes alleen kan duwen en niet trekken, pas dus op wat je doet. Wegens bezuinigingen stelt je goedkope motor je bovendien niet in staat meer dan &eacute;&eacute;n krat tegelijk voort te duwen. Veel succes!
+                    <strong>Movement : </strong>arrow keys<br/>
+                    <strong>Restart : </strong>r<br/>
+                    <strong>Undo : </strong>u
                 </p>
                 <p>
-                    <b>Besturing:</b>Die is niet zo moeilijk: Het besturen van de robot gaat met de pijltjestoetsen. Met <strong>U</strong> kun je een stap ongedaan maken, foutje moet kunnen. immers. Door <strong>R</strong> in te toetsen zet je alle kisten weer terug op de beginpositie.
-                </p>
-                <p>
-                    <em>- Klik ergens op dit vlak om het te laten verdwijnen en verder te gaan met het spel. -</em>
+                    <em>Click to hide this popup</em>
                 </p>
             </div>
             <div id="levelcomplete" onClick="">
