--- a/sokoban.html
+++ b/sokoban.html
@@ -452,7 +452,7 @@
                 return false;
             }
                                     
-            document.onkeypress = function(e){
+            document.onkeydown = function(e){
                 var thisEvent = e;
                 // add support for webkit key events
                 switch(thisEvent.keyCode){
